2006-06-27
	* patch from Maxim Dounin <mdounin@rambler-co.ru> to fix a typo
	  which caused no_rehash flag to not work.
	* release 1.18

2006-04-29
	* flush_all command from Patrick Michael Kane <modus-memcache@pr.es.to>
	* document namespaces
	* release 1.17

2006-04-29
	* fix stats method (people have only been asking since 2004  :-/)
	* add tests
	* move Memcached to lib/Cache directory to be more CPAN-friendly
	* release 1.16

2005-09-20
	* configurable connect delays and callback on connect failure (brad)
	* release 1.15

2005-08-09
        * _connect_sock never works in blocking mode because of a bug in setting
	the default timeout. (Gaal)

2004-07-27
	* release 1.14

2004-07-27
	* kill buggy, slow ord() _hashfunc, replace with crc32.
	  this adds String::CRC32 as a dependency.  thanks to
	  everybody's feedback on the mailing list.

2004-07-19
	* don't use pos() because it doesn't seem to work in
	  taint mode.  use $+[0] instead.  (Dave Evans <..@djce.org.uk>)

2004-06-19
	* support multiple paths to memcache nodes (Brad)
	  see 'set_pref_ip'

2004-05-30
	* release version 1.13

2004-05-26 (Whitaker <whitaker@danga.com>)
	* quiet warning

2004-05-25 (Whitaker <whitaker@danga.com>)
	* get_multi shouldn't modify caller's @_

2004-05-18 (Michael <ged@danga.com>)
	* namespace support
	* use fields

2004-05-16 (Alexei Kozlov <kozlov@w-m.ru>)
	* remove warnings with vec

2004-04-09 (brad)
	* in perl 5.6, trap errors dethawing 5.8 storable objects
	  and instead treat it like a cache miss

2004-04-01
	* use $! and not %! for perl 5.6 compat (Dave Evans <..@djce.org.uk>)
	* don't mark whole IP dead anymore when a node is down (Jason Titus <jtitus@postini.com>)
	* start version numbering (Jamie McCarthy <jamie@mccarthy.vg>)

2004-03-09 (Brad/Avva)
	* _oneline can return more than one line (but always on a line break),
	  so caller must decide when it's really time to quit.  had to modify
	  run_command to know that.  (which is used by stats)
